--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -553,6 +553,10 @@ video {
   position: fixed;
 }
 
+.absolute {
+  position: absolute;
+}
+
 .relative {
   position: relative;
 }
@@ -568,12 +572,28 @@ video {
   bottom: 0px;
 }
 
+.left-\[5\%\] {
+  left: 5%;
+}
+
 .right-0 {
   right: 0px;
 }
 
+.right-\[-4\%\] {
+  right: -4%;
+}
+
 .top-0 {
   top: 0px;
+}
+
+.top-\[-50\%\] {
+  top: -50%;
+}
+
+.top-\[40\%\] {
+  top: 40%;
 }
 
 .-z-50 {
@@ -678,8 +698,16 @@ video {
   height: 3rem;
 }
 
+.h-28 {
+  height: 7rem;
+}
+
 .h-4 {
   height: 1rem;
+}
+
+.h-40 {
+  height: 10rem;
 }
 
 .h-6 {
@@ -706,8 +734,16 @@ video {
   width: 3rem;
 }
 
+.w-28 {
+  width: 7rem;
+}
+
 .w-4 {
   width: 1rem;
+}
+
+.w-40 {
+  width: 10rem;
 }
 
 .w-6 {
@@ -756,6 +792,11 @@ video {
 
 .table-auto {
   table-layout: auto;
+}
+
+.-scale-x-\[1\] {
+  --tw-scale-x: -1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .transform {
@@ -967,8 +1008,13 @@ video {
   line-height: 2.25rem;
 }
 
-.text-7xl {
-  font-size: 4.5rem;
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-6xl {
+  font-size: 3.75rem;
   line-height: 1;
 }
 
@@ -1082,7 +1128,7 @@ h2 {
   padding: 1rem .5em;
   font-family:  "carlson", sans-serif;
   background-color: #000;
-  font-size: 3rem;
+  font-size: 2rem;
   line-height: 1;
 }
 
@@ -1097,36 +1143,15 @@ main {
   font-family: "carlson", sans-serif;
 }
 
-.chick-homepage {
-  position: absolute;
-  top: 50%;
-  right: 10%;
-  width: 10rem;
-  height: 10rem;
-}
-
 .chick {
   background-image: url(../images/chick.png);
   background-size: 100%;
   z-index: 1;
 }
 
-.chick-h1 {
-  position: absolute;
-  top: -35%;
-  left: 5%;
-  width: 10rem;
-  height: 10rem;
-  z-index: 1;
-  transform: scaleX(-1);
-}
-
 .profile-picture {
   width: 300px;
   height: 300px;
-}
-
-.event {
 }
 
 .event-link {
@@ -1184,6 +1209,18 @@ main a {
 }
 
 @media (min-width: 640px) {
+  .sm\:left-\[5\%\] {
+    left: 5%;
+  }
+
+  .sm\:right-\[-1\%\] {
+    right: -1%;
+  }
+
+  .sm\:top-\[-35\%\] {
+    top: -35%;
+  }
+
   .sm\:mx-12 {
     margin-left: 3rem;
     margin-right: 3rem;
@@ -1203,6 +1240,14 @@ main a {
 
   .sm\:hidden {
     display: none;
+  }
+
+  .sm\:h-40 {
+    height: 10rem;
+  }
+
+  .sm\:w-40 {
+    width: 10rem;
   }
 
   .sm\:w-auto {
@@ -1226,6 +1271,11 @@ main a {
   .sm\:py-12 {
     padding-top: 3rem;
     padding-bottom: 3rem;
+  }
+
+  .sm\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
 
   .sm\:text-8xl {
